k8s/ingress-service.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata: 
  name: ingress-service 
  annotations: 
    # tells k8s to create an ingress controller 
    # based on the 'nginx' project
    kubernetes.io/ingress.class: nginx
    # rewrite the request path to have only "/"
    # ex. /api -> /
    nginx.ingress.kubernetes.io/rewrite-taget: /  

spec:
  rules: 
    - http: 
        paths: 
          - path: /
            backend: 
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api/
            backend: 
              serviceName: server-cluster-ip-service 
              servicePort: 5000
